hotfix: language assets api route fixed
